fix(landing page): adjust spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,8 +276,7 @@ h3.my-course {
 }
 
 .social-media {
-  margin-top: 1rem; /* Adjust spacing from the footer content */
-  padding-top: 80px;
+  margin-top: 2rem;
 }
 
 .social-media a {
